pxc/tests/test_01_px/constmet6.px

namespace constmet6;
import io;

struct foo {
	int x;
	function int n(int y) {
		int oldx = x;
		x = y;
		return oldx;
	}
	function int m(int y) const {
		return n(y); // error
	}
}

ref{foo} v = foo(10);
io::println(v->m(20));

